cluster/core/netpol/jellystat.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: jellystat
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jellystat-ingress
  namespace: jellystat
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellystat
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 3000
    - from:
        - namespaceSelector:
            matchLabels:
              ns: uptime
          podSelector:
            matchLabels:
              app.kubernetes.io/name: uptime
      ports:
        - protocol: TCP
          port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jellystat-egress
  namespace: jellystat
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellystat
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: adguard
          podSelector:
            matchLabels:
              app.kubernetes.io/name: adguard-home
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.0.10/32
        - ipBlock:
            cidr: 192.168.0.77/32
        - ipBlock:
            cidr: 192.168.0.78/32
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: pg
          podSelector:
            matchLabels:
              cnpg.io/cluster: postgres
      ports:
        - port: 5432
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: jellyfin
          podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyfin
      ports:
        - port: 8096
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: sabnzbd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: sabnzbd
      ports:
        - port: 8888
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
